# bike-rental-system

./: .gitignore  .gitmessage  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
docs/: arquitectura.md  backlog.md  especificacion-funcional.md  modelo-de-datos.md  proceso-con-ia.md  relacion-con-seguros.md  stack.md
docs/adr/: 0001-registrar-decisiones-de-arquitectura.md  0002-uuid-v7-como-estrategia-de-llaves.md  0003-ubicacion-e-inventario-como-proyecciones-materializadas.md  0004-estado-de-renta-derivado-de-itemrenta.md  0005-tarifa-versionada-inmutable-con-snapshot.md  0006-estrategia-de-concurrencia.md  0007-modelo-de-pago-e-idempotencia.md  0008-estilo-de-arquitectura.md  0009-stack-tecnologico.md  0010-adaptador-http-fastapi.md  README.md
docs/api/: openapi.json  openapi.yaml
docs/postman/: bike-rental.postman_collection.json  bike-rental.postman_environment.json
docs/prd/: 0001-rename-modulo-bicycle-a-inventory.md
examples/: demo_create_rental.py
src/: README.md
src/bike_rental/: __init__.py
src/bike_rental/adapters/: __init__.py  fake_payment_gateway.py  fixed_clock.py  in_memory_bicycle_repository.py  in_memory_payment_repository.py  (+3 more)
tests/: conftest.py  test_api_create_rental.py  test_api_read_endpoints.py  test_api_return_bicycles.py  test_create_rental_validation.py  test_hu01_create_rental_happy_path.py  test_hu02_atomicity.py  test_hu03_no_double_assignment.py  test_hu04_frozen_fare.py  test_hu13_16_return_bicycles.py  test_rental_state_machine.py  test_rn20_payment_idempotency.py
(+26 files in other folders)
